@@ -1,3 +1,8 @@
+2001-02-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/x_pager.c (initialize_pager):
+	fixed FvwmPagerGeometry option
+
 2001-02-15  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (initialize_pager):
